# kier

./: Cargo.toml
client/: Cargo.toml
client/server/: debug_server.sh  release_server.sh
client/server/static/: index.html
client/src/: main.rs
server/: Cargo.toml
src/: lib.rs  main.rs
text_box/: Cargo.toml
text_box/src/: lib.rs
